<resources>
    <string name="app_name">Story App</string>
    <string name="label_version_app">Version</string>
    <string name="et_email_format_message">Email Format is Wrong</string>
    <string name="text_insert_email">Email</string>
    <string name="text_insert_password">Password</string>
    <string name="et_password_length_message">Password Less Than 6 Characters</string>
    <string name="text_skip">| Skip</string>
    <string name="text_login_title">Login Account</string>
    <string name="text_button_login">Login</string>
    <string name="text_havent_account">Don\'t Have an Account? <b>Click This Text to Register</b></string>
    <string name="text_button_register">Register</string>
    <string name="text_register_title">Register Account</string>
    <string name="text_insert_name">Name</string>
    <string name="text_have_account">Have an Account? <b>Click This Text to Login</b></string>
    <string name="text_dialog_informasi">Dialog Information</string>
    <string name="text_button_oke">Oke</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="message_logout">Are You Sure to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hint_image_desc">Type Image Description</string>
    <string name="text_button_submit">Send</string>
    <string name="text_unggah_gambar">Upload Image</string>
    <string name="text_unggah">Upload</string>
    <string name="change_theme">Change Theme</string>
    <string name="title_language_option">Change Localization</string>
    <string name="title_language">Localization</string>
    <string name="key_app_theme">theme</string>
    <string name="unggah_cerita">Upload Story</string>
    <string name="text_pick_gallery">Pick from Photo Gallery</string>
    <string name="text_pick_camera">Take Picture using Camera</string>
    <string name="notif_description_empty">Descriprion is still Empty, Please Fill It!!!</string>
    <string name="notif_request_camera_permission">Not Getting Permission</string>
    <string name="notif_fail_take_picture">Failed to Taking Picture</string>
    <string name="notif_fail_show_camera">Failed to Showing Camera</string>
    <string name="text_timer">Timer</string>
    <string name="label_story_detail">Story Detail</string>
    <string name="text_upload_by">Uploaded by</string>
    <string name="appwidget_text">Story List</string>
    <string name="app_widget_description">This is List of Story from Story App</string>
    <string name="empty_text">Empty</string>
    <string name="header_api">Bearer %1$s</string>
    <string name="label_no_story_list">Story List is Empty</string>
    <string name="text_greeting">Greeting</string>
    <string name="text_greeting_afternoon">Good Afternoon</string>
    <string name="text_greeting_evening">Good Evening</string>
    <string name="text_greeting_night">Good Night</string>
    <string name="text_greeting_morning">Good Morning</string>
</resources>